--- a/proposal.html
+++ b/proposal.html
@@ -50,5 +50,26 @@
         <p>(Tap to close)</p>
     </div>
 </div>
+
+    <div class="glass-wrapper">
+    <div id="promise-section">
+        <button class="path-btn" id="p1" onclick="handlePromise(1)">Promise #1 🤝</button>
+        <button class="path-btn hidden" id="p2" onclick="handlePromise(2)">Promise #2 🍕</button>
+        <button class="path-btn hidden" id="p3" onclick="handlePromise(3)">Promise #3 ❤️</button>
+    </div>
+
+    <div class="stage">
+        <div id="dudu" class="char">(o.o)</div>
+        <div id="bubu" class="char">(-.- )</div>
+    </div>
+
+    <div id="dialogue-box" class="hidden">
+        <h1 id="typewriter"></h1>
+        <div class="btn-group">
+            <button id="yes-btn" onclick="initiateSuccess()">YES! 💍</button>
+            <button id="no-btn" onmouseover="dodge()">No ❌</button>
+        </div>
+    </div>
+</div>
 </body>
 </html>
